--- a/src/css/blocks/nav.css
+++ b/src/css/blocks/nav.css
@@ -18,7 +18,7 @@
 
 .nav__items {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: flex-end;
 }
 
